force-app/main/default/objects/Annotation__c/Annotation__c.object-meta.xml
<CustomObject>
    <description>This object stores WebViewer annotations in the form of an XML string.</description>
    <label>Annotation</label>
    <nameField>
        <label>Annotation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Annotations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>