force-app/main/default/objects/Annotation__c/fields/Annotation_Id__c.field-meta.xml
<CustomField>
    <fullName>Annotation_Id__c</fullName>
    <label>Annotation Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>