force-app/main/default/objects/Annotation__c/fields/Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Id__c</fullName>
    <description>This field stores the ContentVersion Id value of the document associated with this annotation.</description>
    <label>Content Version Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>