force-app/main/default/objects/Annotation__c/fields/xfdfString__c.field-meta.xml
<CustomField>
    <fullName>xfdfString__c</fullName>
    <description>This field stores the XFDF command in XML format.</description>
    <label>xfdfString</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>